--- a/online_store/src/views/Main/main.module.scss
+++ b/online_store/src/views/Main/main.module.scss
@@ -1,3 +1,7 @@
 .main {
-  color: #BF4E55;
+  max-width: 1300px;
+  margin: 0 auto;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  text-align: center;
 }
