--- a/online_store/src/views/Cart/cart.module.scss
+++ b/online_store/src/views/Cart/cart.module.scss
@@ -1,4 +1,8 @@
 .wrapper {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
