--- a/online_store/src/components/SelectedBouquets/selectedBouquets.module.scss
+++ b/online_store/src/components/SelectedBouquets/selectedBouquets.module.scss
@@ -12,3 +12,13 @@
     grid-template-columns: 5fr 3fr 5fr;
 
 }
+
+.cart__header {
+    text-align: center;
+}
+
+.table__header {
+    display: grid;
+    grid-template-columns: 5fr 3fr 2fr 3fr;
+    margin-bottom: 4vh;
+}
