--- a/online_store/src/views/Order/order.module.scss
+++ b/online_store/src/views/Order/order.module.scss
@@ -14,11 +14,7 @@
 
 .bouquetPic {
     display: grid;
-    grid-template-columns: 10vw 10vw;
-}
-
-.cart__header {
-    text-align: center;
+    grid-template-columns: 1fr 2fr;
 }
 
 .quantity {
@@ -29,11 +25,6 @@
     width: 3vw;
 }
 
-.table__header {
-    display: grid;
-    grid-template-columns: 5fr 3fr 2fr 3fr;
-    margin-bottom: 4vh;
-}
 
 .count__input {
     height: 6vh;
@@ -53,4 +44,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.addings {
+    font-size: small;
 }
