--- a/online_store/src/views/Header/header.module.scss
+++ b/online_store/src/views/Header/header.module.scss
@@ -3,8 +3,7 @@
 }
 
 .header {
-    justify-content: space-evenly;
-    color: white;
+    justify-content: space-evenly;  
     background-color:  #BF4E55;
 }
   
@@ -13,28 +12,27 @@
     height: 12vh;
     margin-top: 2vh;
     color: #BF4E55;
-    margin-bottom: 1vh;
+    margin-bottom: 2vh;
 }
   
 .address_top {
     padding-left: 3vw;
     width: 20vw;
-    
+    font-size: 0.7em;
+    text-align: center;
 }
   
 .company_name {
-    margin-left: 10px;
-    margin-top: -25px;
+    margin-top: -3vh;
 }
   
 .logotype {
     display: flex;
-    padding-left: 10vw;
 }
 
   
 .our_name {
-    font-size: 20px;
+    font-size: 1em;
     
 }
   
@@ -43,13 +41,12 @@
 }
   
 .slogan {
-    font-size: 2vh;
+    font-size: 0.6em;
 }
   
 .contacts {
     display: flex;
-    margin-top: -20px;
-    font-size: small;
+    font-size: 0.6em;
     padding-right: 3vw;
     padding-left: 3vw;
 }
@@ -60,11 +57,27 @@
   
 .phone_number {
     margin-top: 2.5vh;
-    margin-left: 6vw;
+    margin-left: 5vw;
     display: grid;
 }
 
 .logo {
     height: 13vh;
     margin-top: -1vh;
+    object-fit: contain;
+}
+
+.symbol {
+    color: '#BF4E55';
+    font-size: 0.7rem;
+}
+
+.envelope {
+    color: '#BF4E55';
+    font-size: 0.7rem;
+    margin-top: 2em;
+}
+
+.menu__item {
+    color: white;
 }
