--- a/online_store/src/components/ProductCard/productcard.module.scss
+++ b/online_store/src/components/ProductCard/productcard.module.scss
@@ -5,8 +5,12 @@ img {
 }
 
 .product_card {
-  height: 100%;
+  height: 220px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.product_card__title {
+  margin-top: 0.5rem;
 }
