--- a/online_store/src/views/Cart/cart.module.scss
+++ b/online_store/src/views/Cart/cart.module.scss
@@ -3,6 +3,6 @@
   flex-direction: column;
   align-items: center;
   max-width: 1440px;
-  margin: 0 auto;
+  margin: 0 auto 50px auto;
   padding: 0 15px;
 }
